--- a/style.css
+++ b/style.css
@@ -13,8 +13,29 @@ html, body {
 	padding: 0 15px 0 1rem;
 }
 
-#home {
-	background: url(images/white-background.jpg) no-repeat center center fixed;
+#wrapper{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	background-image: url(images/white-background.jpg);
+}
+
+
+
+#particles-js{
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+}
+
+
+.home {
 	display: table;
 	height: 92%;
 	width: 100%;
@@ -23,9 +44,10 @@ html, body {
 }
 
 .welcome-text {
-	display: table-cell;
 	text-align: center;
 	padding-top: 10rem;
+	position: relative;
+    
 }
 
 .welcome-text h4 {
